tests/NormalTests/paczka2/big_fuzzy/38563531.err
Error in line 1: pL5y1OfI S939 10,1
Error in line 3: x3cvO3g S555 32,4
Error in line 2: pL5y1OfI S555 5,9
Error in line 7: wBNv0A9Kv S903 62,3
Error in line 30: hi9pF S242 97,6
Error in line 54: S903 S939 64,4
Error in line 47: pL5y1OfI S242 40,8
Error in line 70: S903 S242 2,6
Error in line 73: wBNv0A9Kv S939 49,5
Error in line 67: hi9pF S555 65,6
Error in line 69: gwD4roZWLE S555 186,4
Error in line 91: pL5y1OfI S555 -1,0
Error in line 95: gwD4roZWLE S242 63,6
Error in line 99: OrF S939 28,2
Error in line 97: gwD4roZWLE S555 79,4
Error in line 103: gwD4roZWLE S939 76,1
Error in line 80: hi9pF S939 310,1
Error in line 84: pL5y1OfI S555 33,6
Error in line 105: hi9pF S903 63,4
Error in line 104: gwD4roZWLE S555 94,1
Error in line 113: x3cvO3g S939 10,1
Error in line 126: pL5y1OfI S242 157,3
Error in line 137: pL5y1OfI S555 99,9
Error in line 148: pL5y1OfI S903 50,7
Error in line 149: wBNv0A9Kv S903 56,2
Error in line 150: pL5y1OfI S939 15,3
Error in line 146: x3cvO3g S555 44,6
Error in line 166: x3cvO3g S939 47,5
Error in line 185: OrF S555 13,5
Error in line 201: OrF S903 18,1
Error in line 195: x3cvO3g S242 81,5
Error in line 207: gwD4roZWLE S939 78,2
Error in line 209: x3cvO3g S555 47,8
Error in line 211: gwD4roZWLE S903 75,6
Error in line 216: gwD4roZWLE S242 37,1
Error in line 212: hi9pF S939 59,4
Error in line 226: x3cvO3g S903 75,4
Error in line 228: x3cvO3g S555 71,6
Error in line 233: hi9pF S939 5\,5
Error in line 230: wBNv0A9Kv S555 9,2
Error in line 250: wBNv0A9Kv S903 -1,8
